--- a/index.html
+++ b/index.html
@@ -85,27 +85,19 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 160px;          /* チラ見え量（ここ調整） */
-  overflow: hidden;
+  height: auto;          /* ← 全部見せる */
+  padding: 20px 0;
   text-align: center;
   background: black;
-  z-index: 5;             /* 広告(100)より下、背景より上 */
-  pointer-events: none;  /* クリックは広告優先 */
+  z-index: 5;            /* 広告(100)より下 */
+  pointer-events: none;
 }
 
 #bottom-image img {
-  max-width: 90%;
+  width: 100%;
+  max-width: 1200px;     /* 大きくなりすぎ防止 */
   height: auto;
-  opacity: 0.9;           /* うっすら感 */
-}
-        #bottom-image img {
-  max-width: 90%;
-  height: auto;
-  opacity: 0.9;
-  filter: brightness(0.85) contrast(1.1);
-}
-#bottom-image img {
-  transform: translateY(20px);
+  opacity: 0.95;
 }
     </style>
 </head>
@@ -180,9 +172,9 @@
 <div id="bottom-image">
   <img src="images/footer-cat.png" alt="猫の画像">
 </div>
-    body { padding-bottom: 140px; box-sizing: border-box; }
+    body { padding-bottom: 260px; box-sizing: border-box; }
     body {
-  padding-bottom: 160px; /* #bottom-image の height と同じ */
+  padding-bottom: 260px; /* #bottom-image の height と同じ */
   box-sizing: border-box;
 }
 </body>
