--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿http://googleusercontent.com/image_generation_content/1
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -173,7 +173,7 @@
 </script>
     <!-- ▼ 広告の一番下に表示する画像エリア -->
 <div id="bottom-image">
-  <img src="images/footer-cat.png" alt="猫の画像">
+  <img src="images/footer-cat.png" alt=>
 </div>
  
 </body>
