--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -80,26 +79,30 @@
             cursor: pointer;
         }
 
-#bottom-image {
+#bottom-image{
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 20px 0;
-  text-align: center;
+  height: 360px;           /* ここで高さ調整（例: 300〜450） */
   background: black;
-  z-index: 5;            /* 広告(100)より下 */
+  z-index: 5;
   pointer-events: none;
+
+  display: flex;
+  justify-content: center; /* 横中央 */
+  align-items: center;     /* 縦中央 */
 }
 
-#bottom-image img {
-  width: 100%;
-  max-width: 1200px;     /* 大きくなりすぎ防止 */
+#bottom-image img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
   height: auto;
   opacity: 0.95;
 }
-        body {
-  padding-bottom: 400px;
+body{
+  padding-bottom: 360px;  /* #bottom-image の height と同じ */
   box-sizing: border-box;
 }
     </style>
